--- a/buoylight.html
+++ b/buoylight.html
@@ -252,60 +252,57 @@
   </div>
 </div>
   <!-- OFFCANVAS -->
-  <!-- CONTACT-US -->
+  <!-- BANNER START -->
   <div class="container-fluid home d-flex flex-column align-items-center justify-content-center  h20 pb-0">
     <h2 class="text-white mb-3 display-2 fw-bold">BuoyLIGHT<sup
         class="col-org">TM</sup>  </h2>
  <h4 class="text-white  ">Home / BuoyLIGHT </h4>
   </div>
+  <!-- BANNER END -->
 
+<div class="container-fluid py-5 d-flex flex-lg-row flex-column ">
+  <div class="col-lg-3 who p-2 rounded-3 col-33">
+    <h3  class="text-white1 px-2 py-3">AI Product Solution</h3>
+   <!--  -->
+    <ul class="">
+      <li class="fs-5 text-white1 mb-3"><a href="buoylight.html" class="text-white1">buoyLIGHT <sup
+        class="col-org">TM</sup></a></li>
+      <li class="fs-5 text-white1 mb-3"><a href="buoyspot.html" class="text-white1">buoySPOT<sup
+        class="col-org"> TM</sup></a></li>
+      <li class="fs-5 text-white1 mb-3"><a href="buoyspy.html" class="text-white1">buoySPY<sup
+        class="col-org"> TM</sup></a></li>
+      <li class="fs-5 text-white1 mb-5"><a href="callmatics.html" class="text-white1">
+        callmATICS<sup
+        class="col-org"> TM</sup>
+      </a></li>
 
-<div class="container-fluid">
-  <div class="row mb-4 px-lg-3 py-5 my-4">
-
-         <div class="d-flex flex-lg-row flex-column">
-            <div class="col-lg-7 col-12">
-                <h2 class="fw-bold fs-1">
-                   Product
-                </h2>
-                <p class="pt-3 fw-lighter col-lg-11">
-                  An AI-base solution to capture Container and Vehicle information with laser fast speed and with astounding accuracy and easily integrates with Terminal Operating System (TOS) applications.
-
-Deployed at In and Out Gates, at Weighbridges and at Quay Cranes increases. Cloud-Based Solution is easy to deploy and to manage. On-Premise options are also available.
-
-Increases Terminal Productivities and Efficiencies manifold and Saves millions of dollars for the business. Highly Scalable. Designed for 247 Operating under toughest conditions.
-                </p>
-            </div>
-            <div class="col-lg-5 col-12">
-<img src="Assets/Service-Image/service-img-06.jpg" class="img-fluid rounded-3" alt="">
-            </div>
-
-        </div>
+    </ul>
+    <!--  -->
+<div class="col-12 d-flex flex-column px-2 pb-5">
+  <img src="Assets/Pictures/sidebar-img.jpg" class="img-fluid rounded-3" alt="">
+  <h5 class="text-white1 pt-3">How Can We Help</h5>
+  <p class="text-white1 fw-light">If you need any helps, please feel free to contact us.</p>
+  <span class="text-white1 mt-1"><i class="fa fa-phone pe-2 text-white1"></i>+1 (689) 276-4636</span>
+  <span class="text-white1 mt-1"><i class="fa-solid fa-envelope pe-2 text-white1"></i>info@aisystemsoft.com</span>
 
 </div>
-<div class="row mb-4 px-lg-3 py-5 my-4">
 
-  <div class="d-flex flex-lg-row flex-column">
- 
-     <div class="col-lg-5 col-12">
-<img src="Assets/Service-Image/service-img-06.jpg" class="img-fluid rounded-3" alt="">
-     </div>
-     <div class="col-lg-7 ps-lg-4 col-12">
-      <h2 class="fw-bold fs-1">
-        Benefit
-      </h2>
-      <p class="pt-3 fw-lighter col-lg-11">
-        An AI-base solution to capture Container and Vehicle information with laser fast speed and with astounding accuracy and easily integrates with Terminal Operating System (TOS) applications.
-
-Deployed at In and Out Gates, at Weighbridges and at Quay Cranes increases. Cloud-Based Solution is easy to deploy and to manage. On-Premise options are also available.
-
-Increases Terminal Productivities and Efficiencies manifold and Saves millions of dollars for the business. Highly Scalable. Designed for 247 Operating under toughest conditions.
-      </p>
+</div>
+  <div class="col-lg-9 ps-lg-3" >
+  <!--  -->
+    <h2 class="fs-1 ">Product</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita et fuga ullam placeat perspiciatis quidem unde maiores modi assumenda facilis, voluptas, quia voluptates officia repudiandae labore quam sit. Pariatur modi neque dolores tempore vero repudiandae alias quidem id molestias, cum eius explicabo aspernatur praesentium quibusdam. Minima laudantium dolorum placeat ducimus adipisci? Nam qui praesentium perferendis quos, repellat consequatur corporis. Hic, similique. Perferendis, ipsa vero atque est, laudantium a aspernatur qui quia aut aliquid quasi provident veritatis necessitatibus adipisci consequatur asperiores eius optio quo tenetur beatae eveniet unde. Id omnis voluptatibus doloremque expedita mollitia sed eius aliquid! A numquam sit iste fuga omnis laudantium assumenda nostrum corporis accusamus. Quas suscipit, aliquid at, exercitationem odit obcaecati sint error reprehenderit, aliquam ipsa dolores maxime itaque accusantium tenetur doloribus perferendis quasi enim veritatis dignissimos. Deserunt quos deleniti facere tempora fuga assumenda sunt nam at, eos itaque corporis! Itaque ullam error fuga amet quasi odit, aut veniam delectus unde cupiditate quo id, laborum accusantium quod omnis tempore rerum! Atque quas laboriosam impedit porro illo voluptas, praesentium, sequi, neque doloremque similique ab totam eos inventore veniam quibusdam vitae quod et exercitationem odit. Consequatur repudiandae praesentium saepe earum natus tempore quibusdam, eius voluptatem perferendis aspernatur eveniet!
+    </p>
+  <!--  -->
+  <h2 class="fs-1 ">Benefit</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita et fuga ullam placeat perspiciatis quidem unde maiores modi assumenda facilis, voluptas, quia voluptates officia repudiandae labore quam sit. Pariatur modi neque dolores tempore vero repudiandae alias quidem id molestias, cum eius explicabo aspernatur praesentium quibusdam. Minima laudantium dolorum placeat ducimus adipisci? Nam qui praesentium perferendis quos, repellat consequatur corporis. Hic, similique. Perferendis, ipsa vero atque est, laudantium a aspernatur qui quia aut aliquid quasi provident veritatis necessitatibus adipisci consequatur asperiores eius optio quo tenetur beatae eveniet unde. Id omnis voluptatibus doloremque expedita mollitia sed eius aliquid! A numquam sit iste fuga omnis laudantium assumenda nostrum corporis accusamus. Quas suscipit, aliquid at, exercitationem odit obcaecati sint error reprehenderit, aliquam ipsa dolores maxime itaque accusantium tenetur doloribus perferendis quasi enim veritatis dignissimos. Deserunt quos deleniti facere tempora fuga assumenda sunt nam at, eos itaque corporis! Itaque ullam error fuga amet quasi odit, aut veniam delectus unde cupiditate quo id, laborum accusantium quod omnis tempore rerum! Atque quas laboriosam impedit porro illo voluptas, praesentium, sequi, neque doloremque similique ab totam eos inventore veniam quibusdam vitae quod et exercitationem odit. Consequatur repudiandae praesentium saepe earum natus tempore quibusdam, eius voluptatem perferendis aspernatur eveniet!
+    </p>
+    <!--  -->
   </div>
- </div>
+</div>
 
-</div>
-</div>
 
   <!-- OUR PARTNER START-->
   <div class="container roun my-5 ">
