--- a/buoylight.html
+++ b/buoylight.html
@@ -260,23 +260,20 @@
   </div>
   <!-- BANNER END -->
 
-<div class="container-fluid py-5 d-flex flex-lg-row flex-column ">
-  <div class="col-lg-3 who p-2 rounded-3 col-33">
+<div class="container-fluid  over py-5 d-flex flex-lg-row flex-column "style="height: 1500px;">
+  <div class="col-lg-3 who p-2 rounded-3 sticky-element" >
     <h3  class="text-white1 px-2 py-3">AI Product Solution</h3>
    <!--  -->
-    <ul class="">
-      <li class="fs-5 text-white1 mb-3"><a href="buoylight.html" class="text-white1">buoyLIGHT <sup
+    <ul class="list-unstyled px-2">
+      <li class="fs-5 text-white1 mb-3"><a href="buoylight.html" class="text-white1 text-decoration-none">buoyLIGHT <sup
         class="col-org">TM</sup></a></li>
-      <li class="fs-5 text-white1 mb-3"><a href="buoyspot.html" class="text-white1">buoySPOT<sup
-        class="col-org"> TM</sup></a></li>
-      <li class="fs-5 text-white1 mb-3"><a href="buoyspy.html" class="text-white1">buoySPY<sup
-        class="col-org"> TM</sup></a></li>
-      <li class="fs-5 text-white1 mb-5"><a href="callmatics.html" class="text-white1">
-        callmATICS<sup
-        class="col-org"> TM</sup>
-      </a></li>
+     
 
     </ul>
+    <div class="col-12 d-flex flex-column px-2 pb-5">
+  <img src="Assets/Service-Image/service-img-06.jpg" class="img-fluid rounded-3" alt="">
+
+    </div>
     <!--  -->
 <div class="col-12 d-flex flex-column px-2 pb-5">
   <img src="Assets/Pictures/sidebar-img.jpg" class="img-fluid rounded-3" alt="">
@@ -287,19 +284,26 @@
 
 </div>
 
+
 </div>
   <div class="col-lg-9 ps-lg-3" >
   <!--  -->
-    <h2 class="fs-1 ">Product</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita et fuga ullam placeat perspiciatis quidem unde maiores modi assumenda facilis, voluptas, quia voluptates officia repudiandae labore quam sit. Pariatur modi neque dolores tempore vero repudiandae alias quidem id molestias, cum eius explicabo aspernatur praesentium quibusdam. Minima laudantium dolorum placeat ducimus adipisci? Nam qui praesentium perferendis quos, repellat consequatur corporis. Hic, similique. Perferendis, ipsa vero atque est, laudantium a aspernatur qui quia aut aliquid quasi provident veritatis necessitatibus adipisci consequatur asperiores eius optio quo tenetur beatae eveniet unde. Id omnis voluptatibus doloremque expedita mollitia sed eius aliquid! A numquam sit iste fuga omnis laudantium assumenda nostrum corporis accusamus. Quas suscipit, aliquid at, exercitationem odit obcaecati sint error reprehenderit, aliquam ipsa dolores maxime itaque accusantium tenetur doloribus perferendis quasi enim veritatis dignissimos. Deserunt quos deleniti facere tempora fuga assumenda sunt nam at, eos itaque corporis! Itaque ullam error fuga amet quasi odit, aut veniam delectus unde cupiditate quo id, laborum accusantium quod omnis tempore rerum! Atque quas laboriosam impedit porro illo voluptas, praesentium, sequi, neque doloremque similique ab totam eos inventore veniam quibusdam vitae quod et exercitationem odit. Consequatur repudiandae praesentium saepe earum natus tempore quibusdam, eius voluptatem perferendis aspernatur eveniet!
+    <h2 class="fs-1 pb-3">Product</h2>
+    <p class="fw-light  fs-6">
+      The product delivers laser-fast data capture, instantly recording container and vehicle details with unmatched accuracy. It is optimized for deployment at gates, weighbridges, and quay cranes, improving terminal productivity. The solution leverages AI precision, ensuring that data capture is error-free and accurate, making it a reliable tool for terminals worldwide.
+
     </p>
   <!--  -->
-  <h2 class="fs-1 ">Benefit</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita et fuga ullam placeat perspiciatis quidem unde maiores modi assumenda facilis, voluptas, quia voluptates officia repudiandae labore quam sit. Pariatur modi neque dolores tempore vero repudiandae alias quidem id molestias, cum eius explicabo aspernatur praesentium quibusdam. Minima laudantium dolorum placeat ducimus adipisci? Nam qui praesentium perferendis quos, repellat consequatur corporis. Hic, similique. Perferendis, ipsa vero atque est, laudantium a aspernatur qui quia aut aliquid quasi provident veritatis necessitatibus adipisci consequatur asperiores eius optio quo tenetur beatae eveniet unde. Id omnis voluptatibus doloremque expedita mollitia sed eius aliquid! A numquam sit iste fuga omnis laudantium assumenda nostrum corporis accusamus. Quas suscipit, aliquid at, exercitationem odit obcaecati sint error reprehenderit, aliquam ipsa dolores maxime itaque accusantium tenetur doloribus perferendis quasi enim veritatis dignissimos. Deserunt quos deleniti facere tempora fuga assumenda sunt nam at, eos itaque corporis! Itaque ullam error fuga amet quasi odit, aut veniam delectus unde cupiditate quo id, laborum accusantium quod omnis tempore rerum! Atque quas laboriosam impedit porro illo voluptas, praesentium, sequi, neque doloremque similique ab totam eos inventore veniam quibusdam vitae quod et exercitationem odit. Consequatur repudiandae praesentium saepe earum natus tempore quibusdam, eius voluptatem perferendis aspernatur eveniet!
-    </p>
+  <h2 class="fs-1 py-3">Benefit</h2>
+    <p class="fw-light  fs-5">
+      Enhanced operational efficiency is achieved by automating data capture at gates, weighbridges, and cranes, which improves terminal throughput. The solution also delivers significant cost savings by reducing errors and optimizing operations, ultimately saving millions annually for businesses. Real-time data processing allows for instant information access, enabling quick decision-making and minimizing delays across terminal operations.    </p>
     <!--  -->
+        <!--  -->
+  <h2 class="fs-1 py-3 ">Advantages:</h2>
+  <p class="fw-light  fs-5">
+    The solution offers seamless integration with Terminal Operating Systems (TOS), ensuring efficient operations across the terminal. It is highly scalable and adaptable to growing demands, with both cloud and on-premise deployment options available. Designed for 24/7 reliability, it operates continuously under the toughest conditions, ensuring uninterrupted performance and boosting operational efficiency.
+  </p>
+  <!--  -->
   </div>
 </div>
 
