--- a/buoylight.html
+++ b/buoylight.html
@@ -22,6 +22,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>BuoyLIGHT | Intelligent & Cyber Secure Solutions</title>
+    <!-- intl-tel-input CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
+    <!-- Utils (Optional) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
+  
   <style>
     .h20{
       height: 60vh;
@@ -283,10 +289,29 @@
   <span class="text-white1 mt-1"><i class="fa-solid fa-envelope pe-2 text-white1"></i>info@aisystemsoft.com</span>
 
 </div>
+<div class="col-12 bg m-0 rounded-3 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-3">
+  <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
+  <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name"
+      id="name">
+  <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email"
+      id="email">
 
+
+  <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+  <div class="col-12 text-center  mt-2">
+      <button type="submit"
+          class="mt-3 mx-auto who text-white1 btn3 col-lg-6 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+          Submit
+          <i class="fa-solid fa-paper-plane icon-hover"></i>
+
+      </button>
+  </div>
+
+</div>
 
 </div>
   <div class="col-lg-9 ps-lg-3" >
+    <span></span>
   <!--  -->
     <h2 class="fs-1 pb-3">Product</h2>
     <p class="fw-light  fs-6">
@@ -392,7 +417,22 @@
   <!-- EXTERNEL JS FILE -->
   <script src="JS/app.js"></script>
   <!-- EXTERNEL JS FILE -->
+<!-- INTERNEL FILES JS -->
+ <script>
+  
+// COUNTRY CODE
+const input = document.querySelector(".phonenum"); // Target only the first .phonenum element
 
+if (input) { // Check if the input exists
+    window.intlTelInput(input, {
+        initialCountry: "us",
+        separateDialCode: true,
+        utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js", // For formatting
+    });
+}
+// COUNTRY CODE
+ </script>
+ <!-- INTERNEL FILES JS -->
 </body>
 
 </html>
