--- a/ai.html
+++ b/ai.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Chatbot</title>
+  <title>Career Guidance Chatbot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -18,33 +18,42 @@
     .chat-container {
       width: 100%;
       max-width: 400px;
-      background: white;
+      background: rgb(212, 212, 212);
       padding: 20px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
     .chat-box {
-      height: 300px;
+      height: 500px;
       overflow-y: auto;
-      border: 1px solid #ddd;
+      border: 1px solid #adadad;
       padding: 10px;
       border-radius: 8px;
       background: #fafafa;
       margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
     .chat-box p {
-      margin: 5px 0;
+      margin: 0;
+      padding: 10px;
+      border-radius: 12px;
+      max-width: 75%;
+      word-wrap: break-word;
     }
     .user {
-      text-align: right;
-      color: blue;
+      align-self: flex-start;
+      background-color: #f0f0f0;
+      color: black;
     }
     .bot {
-      text-align: left;
-      color: green;
+      align-self: flex-end;
+      background-color:  #5295dd;
+      color: white;
     }
     input[type="text"] {
-      width: calc(100% - 50px);
+      width: calc(95% - 50px);
       padding: 10px;
       border: 1px solid #ddd;
       border-radius: 4px;
@@ -53,19 +62,21 @@
       width: 40px;
       padding: 10px;
       border: none;
-      background-color: #007bff;
+      background-color: #5295dd;
       color: white;
       border-radius: 4px;
       cursor: pointer;
+    float: right !important;
     }
     button:hover {
+
       background-color: #0056b3;
     }
   </style>
 </head>
 <body>
   <div class="chat-container">
-    <h3>AI Chatbot</h3>
+    <h3>Career Guidance Chatbot</h3>
     <div class="chat-box" id="chatBox"></div>
     <div>
       <input type="text" id="userInput" placeholder="Type your message..." />
@@ -74,50 +85,94 @@
   </div>
 
   <script>
-    async function sendMessage() {
-      const userInput = document.getElementById("userInput").value;
+    const userData = {
+      name: "",
+      age: "",
+      qualifications: "",
+      interest: "",
+      experience: "",
+      skills: "",
+      careerGoals: "",
+    };
+
+    const steps = [
+      "What's your name?",
+      "Nice to meet you! How old are you?",
+      "Great! What is your highest qualification (e.g., High School, Bachelor's, Master's)?",
+      "What areas of IT are you interested in (e.g., programming, networking, AI, data science)?",
+      "What's your experience level? Fresh (0-6 months), 1-3 years, or more?",
+      "Do you have any specific skills or certifications (e.g., Python, Java, AWS)?",
+      "Finally, what are your career goals? What kind of role do you want to pursue (e.g., developer, data analyst)?",
+    ];
+
+    let step = 0;
+
+    window.onload = () => {
+      // Automatically display the first question from the bot
+      appendMessage("bot", steps[step]);
+    };
+
+    function sendMessage() {
+      const userInput = document.getElementById("userInput").value.trim();
       if (!userInput) return;
 
       const chatBox = document.getElementById("chatBox");
 
       // Display user message
-      const userMessage = document.createElement("p");
-      userMessage.className = "user";
-      userMessage.textContent = "You: " + userInput;
-      chatBox.appendChild(userMessage);
+      appendMessage("user", userInput);
 
-      // Call OpenAI API for bot response
-      const botResponse = await getBotResponse(userInput);
+      if (step < steps.length - 1) {
+        saveUserData(step, userInput);
+        step++;
+        setTimeout(() => appendMessage("bot", steps[step]), 500);
+      } else {
+        saveUserData(step, userInput);
+        setTimeout(() => appendMessage("bot", generateRecommendation()), 500);
+      }
 
-      // Display bot response
-      const botMessage = document.createElement("p");
-      botMessage.className = "bot";
-      botMessage.textContent = "Bot: " + botResponse;
-      chatBox.appendChild(botMessage);
-
-      // Clear input field
       document.getElementById("userInput").value = "";
       chatBox.scrollTop = chatBox.scrollHeight;
     }
 
-    async function getBotResponse(userInput) {
-      const API_KEY = "YOUR_OPENAI_API_KEY"; // Replace with your OpenAI API key
-      const response = await fetch("https://api.openai.com/v1/completions", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": `Bearer ${API_KEY}`,
-        },
-        body: JSON.stringify({
-          model: "text-davinci-003",
-          prompt: `You are an AI assistant helping a student. Respond to the user's message in a helpful way. User says: "${userInput}"`,
-          max_tokens: 150,
-          temperature: 0.7,
-        }),
-      });
+    function appendMessage(sender, message) {
+      const chatBox = document.getElementById("chatBox");
+      const messageElement = document.createElement("p");
+      messageElement.className = sender;
+      messageElement.textContent = message;
+      chatBox.appendChild(messageElement);
+    }
 
-      const data = await response.json();
-      return data.choices[0].text.trim();
+    function saveUserData(step, input) {
+      if (step === 0) userData.name = input;
+      else if (step === 1) userData.age = input;
+      else if (step === 2) userData.qualifications = input;
+      else if (step === 3) userData.interest = input.toLowerCase();
+      else if (step === 4) userData.experience = input;
+      else if (step === 5) userData.skills = input;
+      else if (step === 6) userData.careerGoals = input;
+    }
+
+    function generateRecommendation() {
+      const { name, age, qualifications, interest, experience, skills, careerGoals } = userData;
+      let recommendation = `Thank you, ${name} (${age} years old). Based on your inputs, here's my suggestion:\n\n`;
+
+      if (interest.includes("programming")) {
+        recommendation += "Since you're interested in programming, explore:\n1. Full-Stack Development\n2. Mobile App Development\n3. Game Development\n4. AI and Machine Learning\n5. Cybersecurity\n";
+        if (skills) recommendation += `Your skills in ${skills} are highly valuable for this field.\n`;
+      } else if (interest.includes("networking")) {
+        recommendation += "For networking enthusiasts, consider:\n1. Network Administration\n2. Cloud Networking\n3. Security Specialist\n4. Wireless Communication\n";
+      } else if (interest.includes("ai") || interest.includes("data science")) {
+        recommendation += "Since you're into AI/Data Science, look into:\n1. Machine Learning\n2. Data Analysis\n3. Deep Learning\n4. NLP\n5. Data Engineering\n";
+      } else {
+        recommendation += "Your interests seem unique. Explore general fields like IT, Business, or Creative Arts based on your preferences.\n";
+      }
+
+      if (careerGoals) recommendation += `Your goal of becoming a ${careerGoals} is achievable with consistent learning and focus.\n`;
+      if (experience.toLowerCase().includes("fresh")) {
+        recommendation += "\nAs a fresher, I recommend starting with internships or foundational courses.";
+      }
+
+      return recommendation;
     }
   </script>
 </body>
