--- a/buoylight.html
+++ b/buoylight.html
@@ -271,8 +271,8 @@
   </div>
   <!-- BANNER END -->
 
-  <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column" style="height: 300vh !important;">
-    <div class="col-lg-3 who p-2 rounded-3 sticky-element">
+  <div class="container-fluid  over py-5 px-2 d-flex flex-lg-row flex-column">
+    <div class="col-lg-3 who p-2 sticky-element border-radious">
       <h3 class="text-white1 px-2 py-3">AI Product Solution</h3>
       <!--  -->
       <ul class="list-unstyled px-2">
@@ -294,7 +294,7 @@
         <span class="text-white1 mt-1"><i class="fa-solid fa-envelope pe-2 text-white1"></i>info@aisystemsoft.com</span>
 
       </div>
-      <div class="col-12 bg m-0 rounded-3 ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-3">
+      <div class="col-12 bg m-0 border-radious ms-lg-auto d-flex flex-column align-items-end  p-2 text-white py-3">
         <h3 class="text-white1 text-end mb-4">For Inquiry</h3>
         <input type="text" class="form-control my-2 mb-3 col-10" placeholder="Your Name" name="name" id="name">
         <input type="email" class="form-control mb-2 mb-3 col-10" placeholder="Your Email" name="email" id="email">
@@ -313,10 +313,10 @@
       </div>
 
     </div>
-    <div class="col-lg-9 ps-lg-3">
+    <div class="col-lg-9 ps-lg-3 mt-lg-0 mt-2">
       <span></span>
       <!--  -->
-<img src="Assets/Service-Image/service-img-13.jpg" class="mb-4 border-radious img-fluid col-12 " alt="">
+<img src="Assets/Service-Image/service-img-13.jpg" class="mb-4 ser-img-2 border-radious img-fluid col-12 " alt="">
       <!--  -->
       <h2 class="fs-1 pb-3 col-org ">Product</h2>
       <p class="fw-light  fs-5">
