--- a/ai.html
+++ b/ai.html
@@ -1,179 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ur">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Career Guidance Chatbot</title>
+  <title>Address Autocomplete</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@geoapify/geocoder-autocomplete@1.19.0/dist/geocoder-autocomplete.min.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
+      margin: 20px;
     }
-    .chat-container {
+    #autocomplete {
       width: 100%;
-      max-width: 400px;
-      background: rgb(212, 212, 212);
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
-    .chat-box {
-      height: 500px;
-      overflow-y: auto;
-      border: 1px solid #adadad;
       padding: 10px;
-      border-radius: 8px;
-      background: #fafafa;
-      margin-bottom: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .chat-box p {
-      margin: 0;
-      padding: 10px;
-      border-radius: 12px;
-      max-width: 75%;
-      word-wrap: break-word;
-    }
-    .user {
-      align-self: flex-start;
-      background-color: #f0f0f0;
-      color: black;
-    }
-    .bot {
-      align-self: flex-end;
-      background-color:  #5295dd;
-      color: white;
-    }
-    input[type="text"] {
-      width: calc(95% - 50px);
-      padding: 10px;
-      border: 1px solid #ddd;
+      font-size: 16px;
+      border: 1px solid #ccc;
       border-radius: 4px;
-    }
-    button {
-      width: 40px;
-      padding: 10px;
-      border: none;
-      background-color: #5295dd;
-      color: white;
-      border-radius: 4px;
-      cursor: pointer;
-    float: right !important;
-    }
-    button:hover {
-
-      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <h3>Career Guidance Chatbot</h3>
-    <div class="chat-box" id="chatBox"></div>
-    <div>
-      <input type="text" id="userInput" placeholder="Type your message..." />
-      <button onclick="sendMessage()">></button>
-    </div>
-  </div>
-
+  <h1>پتہ خودکار تکمیل</h1>
+  <input id="autocomplete" type="text" placeholder="شہر کا نام درج کریں" />
+  <script src="https://cdn.jsdelivr.net/npm/@geoapify/geocoder-autocomplete@1.19.0/dist/geocoder-autocomplete.min.js" async defer></script>
   <script>
-    const userData = {
-      name: "",
-      age: "",
-      qualifications: "",
-      interest: "",
-      experience: "",
-      skills: "",
-      careerGoals: "",
+    const input = document.getElementById('autocomplete');
+    const options = {
+      apiKey: '84d660d0080141a9b9979e71afe9bcb8',
+      lang: 'ur-PK',
+      placeholder: 'شہر کا نام درج کریں',
+      limit: 5,
+      types: ['(cities)'],
+      bias: 'pk',
     };
-
-    const steps = [
-      "What's your name?",
-      "Nice to meet you! How old are you?",
-      "Great! What is your highest qualification (e.g., High School, Bachelor's, Master's)?",
-      "What areas of IT are you interested in (e.g., programming, networking, AI, data science)?",
-      "What's your experience level? Fresh (0-6 months), 1-3 years, or more?",
-      "Do you have any specific skills or certifications (e.g., Python, Java, AWS)?",
-      "Finally, what are your career goals? What kind of role do you want to pursue (e.g., developer, data analyst)?",
-    ];
-
-    let step = 0;
-
-    window.onload = () => {
-      // Automatically display the first question from the bot
-      appendMessage("bot", steps[step]);
-    };
-
-    function sendMessage() {
-      const userInput = document.getElementById("userInput").value.trim();
-      if (!userInput) return;
-
-      const chatBox = document.getElementById("chatBox");
-
-      // Display user message
-      appendMessage("user", userInput);
-
-      if (step < steps.length - 1) {
-        saveUserData(step, userInput);
-        step++;
-        setTimeout(() => appendMessage("bot", steps[step]), 500);
-      } else {
-        saveUserData(step, userInput);
-        setTimeout(() => appendMessage("bot", generateRecommendation()), 500);
-      }
-
-      document.getElementById("userInput").value = "";
-      chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    function appendMessage(sender, message) {
-      const chatBox = document.getElementById("chatBox");
-      const messageElement = document.createElement("p");
-      messageElement.className = sender;
-      messageElement.textContent = message;
-      chatBox.appendChild(messageElement);
-    }
-
-    function saveUserData(step, input) {
-      if (step === 0) userData.name = input;
-      else if (step === 1) userData.age = input;
-      else if (step === 2) userData.qualifications = input;
-      else if (step === 3) userData.interest = input.toLowerCase();
-      else if (step === 4) userData.experience = input;
-      else if (step === 5) userData.skills = input;
-      else if (step === 6) userData.careerGoals = input;
-    }
-
-    function generateRecommendation() {
-      const { name, age, qualifications, interest, experience, skills, careerGoals } = userData;
-      let recommendation = `Thank you, ${name} (${age} years old). Based on your inputs, here's my suggestion:\n\n`;
-
-      if (interest.includes("programming")) {
-        recommendation += "Since you're interested in programming, explore:\n1. Full-Stack Development\n2. Mobile App Development\n3. Game Development\n4. AI and Machine Learning\n5. Cybersecurity\n";
-        if (skills) recommendation += `Your skills in ${skills} are highly valuable for this field.\n`;
-      } else if (interest.includes("networking")) {
-        recommendation += "For networking enthusiasts, consider:\n1. Network Administration\n2. Cloud Networking\n3. Security Specialist\n4. Wireless Communication\n";
-      } else if (interest.includes("ai") || interest.includes("data science")) {
-        recommendation += "Since you're into AI/Data Science, look into:\n1. Machine Learning\n2. Data Analysis\n3. Deep Learning\n4. NLP\n5. Data Engineering\n";
-      } else {
-        recommendation += "Your interests seem unique. Explore general fields like IT, Business, or Creative Arts based on your preferences.\n";
-      }
-
-      if (careerGoals) recommendation += `Your goal of becoming a ${careerGoals} is achievable with consistent learning and focus.\n`;
-      if (experience.toLowerCase().includes("fresh")) {
-        recommendation += "\nAs a fresher, I recommend starting with internships or foundational courses.";
-      }
-
-      return recommendation;
-    }
+    const autocomplete = new Geoapify.GeocoderAutocomplete(input, options);
+    autocomplete.on('select', (e) => {
+      const place = e.result;
+      console.log('منتخب کردہ جگہ:', place);
+    });
   </script>
 </body>
 </html>
