--- a/buoylight.html
+++ b/buoylight.html
@@ -400,24 +400,25 @@
   </div>
 
   <!-- FORM-->
-  <div class="container-fluid d-flex bg flex-lg-row flex-column frm justify-content-between  mx-0 ">
+   <div class="container-fluid  mt-4 d-flex bg flex-lg-row flex-column frm justify-content-between  mx-0 ">
 
     <div class="col-lg-9 mx-auto d-flex flex-column align-items-start justify-content-center   px-4">
-      <h2 class="text-center mb-3 mt-5 text-white">Form</h2>
-      <p class="locte text-white text-center">Fill the form and get the outline and other material</p>
+      <h2 class="text-center mb-3 mt-5 text-white fw-bolder mx-auto display-6">Schedule Meeting</h2>
+      <p class="locte text-white text-center mx-auto fw-lighter ">Fill out the form to schedule a meeting and get the outline and other materials.</p>
+
       <form class="mt-3 col-12">
         <div class="row g-3 col-12">
-          <div class="col-md-6 col-12">
+          <div class="col-md-4 col-12">
             <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required="">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <input type="email" class="form-control form-control1" id="lastName" placeholder="Email" required="">
           </div>
-          <div class="col-md-6">
-            <input type="tel" class="form-control form-control1" id="phoneNumber" placeholder="Phone Number"
-              required="">
+          <div class="col-md-4">
+            <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
+
           </div>
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <select class="form-select col-text py-3" aria-label="Default select example">
               <option selected="">Class 6th Standard</option>
               <option value="Class 6th Standard">Class 6th Standard</option>
@@ -428,12 +429,15 @@
               <option value="Class 10th Standard">Class 10th Standard</option>
               <option value="Class 11 &amp; 12 th Standard">Class 11 &amp; 12 th Standard</option>
             </select>
+          </div> -->
+          <div class="col-md-4">
+            <input type="text" class="form-control form-control1" id="firstName" placeholder="Address" required="">
           </div>
-          <div class="col-md-6">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="School Name" required="">
-          </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <input type="email" class="form-control form-control1" id="lastName" placeholder="Country" required="">
+          </div>
+          <div class="col-md-4">
+            <input type="date" class="form-control fo" id="lastName" required>
           </div>
 
           <div class="col-12 text-center mb-5">
@@ -549,15 +553,17 @@
   <script>
 
     // COUNTRY CODE
-    const input = document.querySelector(".phonenum"); // Target only the first .phonenum element
+     const inputs = document.querySelectorAll(".phonenum");
+console.log(inputs);
 
-    if (input) { // Check if the input exists
-      window.intlTelInput(input, {
+inputs.forEach(input => {
+    window.intlTelInput(input, {
         initialCountry: "us",
         separateDialCode: true,
         utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js", // For formatting
-      });
-    }
+    });
+});
+    
     var acc = document.getElementsByClassName("accordion");
 var i;
 
