--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- intl-tel-input CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/intlTelInput.min.js"></script>
+  <!-- Utils (Optional) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js"></script>
 
   <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
 </head>
@@ -475,13 +480,13 @@ Windermere, Windermere, FL34786, USA
   </div>
   <!-- Service START -->
   <div class="container-fluid d-flex flex-wrap cardss">
-    <div class="col-lg-6 col-12   cardss1">
+    <div class="col-lg-6 col-12 my-2  cardss1">
       <div class="col-lg-11 col-12 d-flex flex-row">
         <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
 
           <i class="fa-solid fa-robot my-4   d-flex flex-row align-items-center"></i>
         </div>
-        <div class="col-10 ms-lg-2 py-4">
+        <div class="col-10 ms-2 py-4">
 
           <h2 class="d-flex flex-row align-items-center ">AI Products & Solutions</h2>
           <p class=" col-lg-11 col-12 py-3  paraa-1 ">Empowering businesses with cutting-edge AI technologies to
@@ -505,12 +510,12 @@ Windermere, Windermere, FL34786, USA
       </div>
     </div>
 
-    <div class="col-lg-6 col-12  mt-lg-5 cardss1">
+    <div class="col-lg-6 col-12 my-2  mt-lg-5 cardss1">
       <div class="col-lg-11 col-12 d-flex flex-row">
         <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
           <i class="fas fa-balance-scale my-4   d-flex flex-row align-items-center "></i>
         </div>
-        <div class="col-10 ms-lg-2 py-4">
+        <div class="col-10 ms-2 py-4">
 
           <h2 class="d-flex flex-row align-items-center ">GRC Solutions</h2>
           <p class=" col-lg-11 col-12 py-3  paraa-1 ">GRC Solutions specializes in Governance, Risk, and Compliance
@@ -533,12 +538,12 @@ Windermere, Windermere, FL34786, USA
       </div>
       <div class="cardss-hover"></div>
     </div>
-    <div class="col-lg-6 col-12  mt-lg-5  cardss1">
+    <div class="col-lg-6 col-12 my-2 mt-lg-5  cardss1">
       <div class="col-lg-11 col-12 d-flex flex-row">
         <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
           <i class="fa fa-code my-4   d-flex flex-row align-items-center "></i>
         </div>
-        <div class="col-10 ms-lg-2 py-4">
+        <div class="col-10 ms-2 py-4">
 
           <h2 class="d-flex flex-row align-items-center ">Web & App Development</h2>
           <p class=" col-lg-11 col-12 py-3  paraa-1 ">We specialize in Web and App Development, delivering cutting-edge
@@ -560,13 +565,13 @@ Windermere, Windermere, FL34786, USA
       </div>
       <div class="cardss-hover"></div>
     </div>
-    <div class="col-lg-6 col-12  mt-lg-5 pt-5 cardss1">
+    <div class="col-lg-6 col-12 my-2 mt-lg-5 pt-5 cardss1">
       <div class="col-lg-11 col-12 d-flex flex-row">
         <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
           <i class="fa-solid fa-magnifying-glass-dollar my-4   d-flex flex-row align-items-center "></i>
 
         </div>
-        <div class="col-10 ms-lg-2 py-4">
+        <div class="col-10 ms-2 py-4">
 
           <h2 class="d-flex flex-row align-items-center ">Ecommerce Solutions</h2>
           <p class=" col-lg-11 col-12 py-3  paraa-1 ">Empowering businesses with cutting-edge AI technologies to
@@ -589,13 +594,13 @@ Windermere, Windermere, FL34786, USA
       </div>
       <div class="cardss-hover"></div>
     </div>
-    <div class="col-lg-6 col-12  mt-lg-5 cardss1">
+    <div class="col-lg-6 col-12 my-2 mt-lg-5 cardss1">
       <div class="col-lg-11 col-12 d-flex flex-row">
         <div class="col-2 col-22 d-flex flex-row align-items-center justify-content-center">
           <i class="fa-solid fa-rectangle-ad my-4   d-flex flex-row align-items-center "></i>
 
         </div>
-        <div class="col-10 ms-lg-2 py-4">
+        <div class="col-10 ms-2 py-4">
 
           <h2 class="d-flex flex-row align-items-center ">Digital Marketing</h2>
           <p class=" col-lg-11 col-12 py-3  paraa-1 ">Empowering businesses with cutting-edge AI technologies to
@@ -815,7 +820,8 @@ Windermere, Windermere, FL34786, USA
             <input type="text" class="form-control form-control1" id="lastName" placeholder="Last Name" required>
           </div>
           <div class="col-md-6">
-            <input type="tel" class="form-control form-control1" id="phoneNumber" placeholder="Phone Number" required>
+            <!-- <input type="tel" class="form-control form-control1 phonenum" id="phoneNumber" placeholder=" Phone Number" required> -->
+            <input id="phone" type="tel" class="mb-3 col-12 mb-3 phonenum">
           </div>
 
           <div class="col-md-6">
@@ -951,7 +957,15 @@ Windermere, Windermere, FL34786, USA
   <!-- EXTERNEL JS FILE -->
   <script src="JS/app.js"></script>
   <!-- EXTERNEL JS FILE -->
+<script>
+const input = document.querySelector(".phonenum");
 
+window.intlTelInput(input, {
+    initialCountry: "us",
+    separateDialCode: true,
+    utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/js/utils.js", // For formatting
+});
+</script>
 </body>
 
 </html>
