--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AI-System-Soft | Intelligent & Cyber Secure Solutions</title>
+    <title>AI Product Solution | Intelligent & Cyber Secure Solutions</title>
     <!-- FONT AWEOSEOM -->
     <link rel="shortcut icon" href="Assets/Logo/Favicon.PNG" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
