--- a/buoylight.html
+++ b/buoylight.html
@@ -36,6 +36,16 @@
       /* object-fit: cover; */
       background-position: center !important;
       background-image: url("Assets/Banner-Image/banner-img-11.png");
+    } input,.form-control{
+      border: 1px solid rgb(196, 196, 196) !important;
+      background-color: white !important;
+
+    }
+    .phonenum{
+      color: black !important;
+    }
+    .form-control::placeholder{
+      color: black !important;
     }
   </style>
 </head>
@@ -406,8 +416,8 @@
       <h2 class="text-center mb-3 mt-5 text-white fw-bolder mx-auto display-6">Schedule Meeting</h2>
       <p class="locte text-white text-center mx-auto fw-lighter ">Fill out the form to schedule a meeting and get the outline and other materials.</p>
 
-      <form class="mt-3 col-12">
-        <div class="row g-3 col-12">
+      <form class="mt-3 col-12 my-5">
+        <div class="row g-3 col-12 bg-white p-2 rounded-2 shadow-lg  ">
           <div class="col-md-4 col-12">
             <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required="">
           </div>
@@ -418,18 +428,7 @@
             <input id="phone" type="tel" class="phonenum mb-3 col-12 mb-3">
 
           </div>
-          <!-- <div class="col-md-6">
-            <select class="form-select col-text py-3" aria-label="Default select example">
-              <option selected="">Class 6th Standard</option>
-              <option value="Class 6th Standard">Class 6th Standard</option>
-              <option value="Class 7th Standard">Class 7th Standard</option>
-              <option value="Class 8th Standard">Class 8th Standard</option>
 
-              <option value="Class 9th Standard">Class 9th Standard</option>
-              <option value="Class 10th Standard">Class 10th Standard</option>
-              <option value="Class 11 &amp; 12 th Standard">Class 11 &amp; 12 th Standard</option>
-            </select>
-          </div> -->
           <div class="col-md-4">
             <input type="text" class="form-control form-control1" id="firstName" placeholder="Address" required="">
           </div>
@@ -437,13 +436,13 @@
             <input type="email" class="form-control form-control1" id="lastName" placeholder="Country" required="">
           </div>
           <div class="col-md-4">
-            <input type="date" class="form-control fo" id="lastName" required>
+            <input type="date" class="form-control text-dark" id="lastName" required>
           </div>
 
-          <div class="col-12 text-center mb-5">
+          <div class="col-12 text-center mb-2">
             <button type="submit"
               class="mt-3 mx-auto  btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
-              SEND NOW
+             SUBMIT
               <i class="fa-solid fa-paper-plane icon-hover"></i>
 
             </button>
