--- a/about.html
+++ b/about.html
@@ -24,6 +24,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>About-Us | Intelligent & Cyber Secure Solutions</title>
+  <style>
+    .about-container-1 {
+    background-image: url("Assets/Banner-Image/banner-img-2.jpg");
+
+    height: 60vh;
+    width: 100%;
+    background-size: cover;
+    object-fit: cover;
+}
+
+  </style>
 </head>
 
 <body>
@@ -143,7 +154,7 @@ Windermere, Windermere, FL34786, USA
             </ul> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
             <span class="navhover"></span>
           </li>
           <li class="nav-item">
