--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@ Windermere, Windermere, FL34786, USA
             </ul> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
             <span class="navhover"></span>
           </li>
           <li class="nav-item">
