--- a/EcommerceSolution.html
+++ b/EcommerceSolution.html
@@ -146,7 +146,7 @@
             </ul> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
             <span class="navhover"></span>
           </li>
           <li class="nav-item">
