--- a/callmatics.html
+++ b/callmatics.html
@@ -118,7 +118,7 @@
             </ul> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
             <span class="navhover"></span>
           </li>
           <li class="nav-item">
