--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="container-fluid d-flex flex-row justify-content-between">
     <!-- Logo -->
     <a class="navbar-brand" href="#">
-      <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+      <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 pe-lg-3" />
 
     </a>
 
@@ -57,8 +57,8 @@
 <i class="fa-solid fa-bars"></i>
 </button>
     <!-- Collapsible Navbar Content -->
-    <div class="collapse sdsd navbar-collapse d-flex flex-row justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mt-2 mb-lg-0 d-lg-flex d-none">
+    <div class="collapse sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
+      <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
           <span class="navhover"></span>
@@ -100,7 +100,7 @@
       </ul>
 
       <!-- Offcanvas Button -->
-      <form class="d-lg-flex d-none" role="search">
+      <form class="d-lg-flex d-none ms-auto " role="search">
         <div class="input-group">
           <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
             aria-controls="offcanvasRight1">
