--- a/DigitalMarketing.html
+++ b/DigitalMarketing.html
@@ -539,48 +539,9 @@
         crossorigin="anonymous"></script>
     <!-- SWIPER CDN -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-     <!-- INTERNEL JS  -->
-     <script>
-        window.addEventListener("scroll", function () {
-
-    
-var navunder=document.getElementById("navunder");
-const scrollableHeight = document.body.scrollHeight - window.innerHeight;
-
-
-const scrollProgress = (window.scrollY / scrollableHeight) * 98;
-
-if(scrollProgress >95){
-  document.getElementById("topbtn").innerHTML=`<i class="fa-solid fa-arrow-up"></i>`;
-}
-else{
-  this.document.getElementById("topbtn").innerHTML=scrollProgress.toFixed(0)+"%";
-
-}
-navunder.style.width=`${scrollProgress}vw`
-var navbar = document.getElementById("navbar");
-var navlink=document.querySelectorAll(".nav-item > .nav-link")
-var btn=document.querySelector(".btn-red")
-
-
-if (window.scrollY > 400) {
-navbar.classList.add("navfix1");// Add fade-in class
-btn.classList.add("nav-color")
-navlink.forEach((e)=>{
-    e.classList.add("nav-color")
-})
-} else {
-btn.classList.remove("nav-color")
-
-navbar.classList.remove("navfix1"); // Remove fade-in class
-
-navlink.forEach((e)=>{
-    e.classList.remove("nav-color")
-})
-}
-});
-      </script>
-      <!-- INTERNEL JS -->
+  <!-- EXTERNEL JS FILE -->
+  <script src="JS/app.js"></script>
+  <!-- EXTERNEL JS FILE -->
 </body>
 
 </html>
