--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -38,78 +38,80 @@
     <!-- HOME START -->
     <div id="home1" class="home d-flex flex-column justify-content-center  align-items-center ">
 <img src="Assets/Banner-Image/banner-img-17.jpg" class="home-img w-100" alt="">
-        <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
-  <div class="container-fluid d-flex flex-row justify-content-between">
-    <!-- Logo -->
-    <a class="navbar-brand" href="#">
-      <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 pe-lg-3" />
+    <!-- NAVBAR START -->
+    <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
+      <div class="container-fluid d-flex flex-row justify-content-between">
+        <!-- Logo -->
+        <a class="col-lg-3 col-9" href="#">
+          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
-    </a>
+        </a>
 
-    <!-- Toggler Button -->
+        <!-- Toggler Button -->
 
-<button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-<i class="fa-solid fa-bars"></i>
-</button>
-    <!-- Collapsible Navbar Content -->
-    <div class="collapse sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
-      <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <span class="navhover"></span>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Service
-          </a>
-          <span class="navhover"></span>
-          <ul class="dropdown-menu mx-auto">
-            <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
-          
+        <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+        <!-- Collapsible Navbar Content -->
+        <div class="collapse ps-lg-5 sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
+          <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <span class="navhover"></span>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Service
+              </a>
+              <span class="navhover"></span>
+              <ul class="dropdown-menu mx-auto">
+                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
 
 
-            </a></li>
-            <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-            <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
-            <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
-            <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
-                Digital Marketing</a></li>
 
+                  </a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+                <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
+                    Digital Marketing</a></li>
+
+              </ul>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="about.html" aria-expanded="false">
+                About-Us
+              </a>
+              <span class="navhover"></span>
+
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              <span class="navhover"></span>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+              <span class="navhover"></span>
+            </li>
           </ul>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="about.html" aria-expanded="false">
-            About-Us
-          </a>
-          <span class="navhover"></span>
-      
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-          <span class="navhover"></span>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
-          <span class="navhover"></span>
-        </li>
-      </ul>
 
-      <!-- Offcanvas Button -->
-      <form class="d-lg-flex d-none ms-auto " role="search">
-        <div class="input-group">
-          <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
-            aria-controls="offcanvasRight1">
-            <i class="fa-solid fa-bars"></i>
-          </button>
+          <!-- Offcanvas Button -->
+          <form class="d-lg-flex d-none ms-auto " role="search">
+            <div class="input-group">
+              <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
+                aria-controls="offcanvasRight1">
+                <i class="fa-solid fa-bars"></i>
+              </button>
+            </div>
+          </form>
         </div>
-      </form>
-    </div>
-  </div>
-  <!-- Optional Element -->
-  <div class="" id="navunder"></div>
-</nav>
-  <!-- NAVBAR -->
+      </div>
+      <!-- Optional Element -->
+      <div class="" id="navunder"></div>
+    </nav>
+    <!-- NAVBAR END-->
 
         <div class="container d-flex flex-lg-row  align-items-center flex-column">
             <div class="col-lg-4">
@@ -200,73 +202,79 @@
 
     <!-- INFO CANVAS -->
     <!-- OFFCANVAS -->
-    <div class="offcanvas offcanvas-top1" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-        <div class="offcanvas-header container">
-            <h5 class="offcanvas-title" id="offcanvasTopLabel">
-                <a class="navbar-brand" href="#">
-                    <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+  <!-- OFFCANVAS -->
+  <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
+  aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header container">
+    <h5 class="offcanvas-title" id="offcanvasRightLabel">
+      <a class="navbar-brand" href="#">
+        <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+        <!-- Replace with actual logo path -->
+      </a>
+    </h5>
+    <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;"
+      data-bs-dismiss="offcanvas" aria-label="Close">
+      <i class="fa-solid fa-xmark text-white1 fs-1 "></i>
+    </button>
+  </div>
+  <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
+    <div class="col-lg-6 col-12">
+      <ul class="navbar-nav me-auto mt-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          <span class="navhover"></span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="about.html">About</a>
+          <span class="navhover"></span>
+        </li>
+        <!--  -->
 
-                    <!-- Replace with actual logo path -->
-                </a>
-            </h5>
-            <button type="button" class="text-white  bg-transparent  border-0" style="color: white !important;"
-                data-bs-dismiss="offcanvas" aria-label="Close">
-                <i class="fa-solid fa-xmark  text-white fs-1 "></i>
-            </button>
-        </div>
-        <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
-            <div class="col-lg-6 col-12">
+        <!--  -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Service
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+            <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
+            <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+            <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+            <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
+          </ul>
+        </li>
 
-                <ul class="navbar-nav me-auto mt-2 mb-lg-0 ">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                        <span class="navhover"></span>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">Service</a>
-                        <span class="navhover"></span>
 
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link " href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">Pages</a>
-                        <span class="navhover"></span>
-
-                    </li>
-                    <!--  -->
-
-                    <!--  -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        <span class="navhover"></span>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                        <span class="navhover"></span>
-                    </li>
-                </ul>
-                <div>
-                    <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white ">Lets Talk
-                        <span class="lets-talk-btn-hover"></span>
-                    </button>
-                </div>
-                <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
-                    <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div>
-            </div>
-            <div class="col-lg-6 col-12">
-                <h2 class="display-2 text-white text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
-
-            </div>
-        </div>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <span class="navhover"></span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+          <span class="navhover"></span>
+        </li>
+      </ul>
+      <div>
+        <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white1 ">Lets Talk
+          <span class="lets-talk-btn-hover"></span>
+        </button>
+      </div>
+      <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="text-white1 mx-2"><i class="fab fa-linkedin"></i></a>
+      </div>
     </div>
+    <div>
+    </div>
+    <div class="col-lg-6 col-12">
+      <h2 class="display-2 text-white1 text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
+    </div>
+  </div>
+</div>
+<!-- OFFCANVAS -->
     <!-- OFFCANVAS -->
     <!-- HOME END -->
     <!-- FOOTER -->
