--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
       <div class="container-fluid d-flex flex-row justify-content-between">
         <!-- Logo -->
-        <a class="navbar-brand " href="#">
-          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 pe-lg-3" />
+        <a class="col-lg-3 col-9" href="#">
+          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
         </a>
 
@@ -58,7 +58,7 @@
           <i class="fa-solid fa-bars"></i>
         </button>
         <!-- Collapsible Navbar Content -->
-        <div class="collapse sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
+        <div class="collapse ps-lg-5 sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
           <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -259,7 +259,7 @@
 
   <!-- INFO CANVAS -->
   <!-- OFFCANVAS -->
-  <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
+   <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
     aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
@@ -278,6 +278,10 @@
         <ul class="navbar-nav me-auto mt-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <span class="navhover"></span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="about.html">About</a>
             <span class="navhover"></span>
           </li>
           <!--  -->
