--- a/buoyspot.html
+++ b/buoyspot.html
@@ -43,76 +43,80 @@
 <div class="container-fluid  mb-5 d-flex flex-column align-items-center justify-content-center">
   <img src="Assets/Banner-Image/banner-img-14.png" class="m-0 p-0 w-100 position-absolute h20 " alt="">
 <!-- NAVBAR START -->
-<nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
-  <div class="container-fluid d-flex flex-row justify-content-between">
-    <!-- Logo -->
-    <a class="navbar-brand " href="#">
-      <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 pe-lg-3" />
+    <!-- NAVBAR START -->
+    <nav class="navbar navbar-expand-lg px-0 py-2 container-fluid d-flex flex-column" id="navbar">
+      <div class="container-fluid d-flex flex-row justify-content-between">
+        <!-- Logo -->
+        <a class="col-lg-3 col-9" href="#">
+          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2 " />
 
-    </a>
+        </a>
 
-    <!-- Toggler Button -->
+        <!-- Toggler Button -->
 
-<button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-<i class="fa-solid fa-bars"></i>
-</button>
-    <!-- Collapsible Navbar Content -->
-    <div class="collapse sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
-      <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <span class="navhover"></span>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Service
-          </a>
-          <span class="navhover"></span>
-          <ul class="dropdown-menu mx-auto">
-            <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
-          
+        <button class="btn btn-red navbar-toggler" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+        <!-- Collapsible Navbar Content -->
+        <div class="collapse ps-lg-5 sdsd navbar-collapse d-flex flex-row " id="navbarSupportedContent">
+          <ul class="navbar-nav  mt-2 mb-lg-0 d-lg-flex d-none">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <span class="navhover"></span>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Service
+              </a>
+              <span class="navhover"></span>
+              <ul class="dropdown-menu mx-auto">
+                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
 
 
-            </a></li>
-            <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-            <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
-            <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
-            <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
-                Digital Marketing</a></li>
 
+                  </a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+                <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
+                    Digital Marketing</a></li>
+
+              </ul>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="about.html" aria-expanded="false">
+                About-Us
+              </a>
+              <span class="navhover"></span>
+
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              <span class="navhover"></span>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Us</a>
+              <span class="navhover"></span>
+            </li>
           </ul>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="about.html" aria-expanded="false">
-            About-Us
-          </a>
-          <span class="navhover"></span>
-      
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-          <span class="navhover"></span>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
-          <span class="navhover"></span>
-        </li>
-      </ul>
 
-      <!-- Offcanvas Button -->
-      <form class="d-lg-flex d-none ms-auto " role="search">
-        <div class="input-group">
-          <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
-            aria-controls="offcanvasRight1">
-            <i class="fa-solid fa-bars"></i>
-          </button>
+          <!-- Offcanvas Button -->
+          <form class="d-lg-flex d-none ms-auto " role="search">
+            <div class="input-group">
+              <button class=" btn-red" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1"
+                aria-controls="offcanvasRight1">
+                <i class="fa-solid fa-bars"></i>
+              </button>
+            </div>
+          </form>
         </div>
-      </form>
-    </div>
-  </div>
-  <!-- Optional Element -->
-  <div class="" id="navunder"></div>
-</nav>
+      </div>
+      <!-- Optional Element -->
+      <div class="" id="navunder"></div>
+    </nav>
+    <!-- NAVBAR END-->
 <!-- NAVBAR END-->
 
 <!-- MAIN SUB DIV START -->
@@ -191,7 +195,7 @@
 
   <!-- INFO CANVAS -->
   <!-- OFFCANVAS -->
-  <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
+   <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
     aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header container">
       <h5 class="offcanvas-title" id="offcanvasRightLabel">
@@ -210,6 +214,10 @@
         <ul class="navbar-nav me-auto mt-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <span class="navhover"></span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="about.html">About</a>
             <span class="navhover"></span>
           </li>
           <!--  -->
