--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -178,70 +178,77 @@
   
   <!-- INFO CANVAS -->
   <!-- OFFCANVAS -->
-<div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-  <div class="offcanvas-header container">
-    <h5 class="offcanvas-title" id="offcanvasRightLabel">
-      <a class="navbar-brand" href="#">
-        <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
-        <!-- Replace with actual logo path -->
-      </a>
-    </h5>
-    <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;" data-bs-dismiss="offcanvas" aria-label="Close">
-      <i class="fa-solid fa-xmark text-white1 fs-1 "></i>
-    </button>
-  </div>
-  <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
-    <div class="col-lg-6 col-12">
-      <ul class="navbar-nav me-auto mt-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <span class="navhover"></span>
-        </li>
-      <!--  -->
+   <div class="offcanvas offcanvas-end offcanvas-top1 who" tabindex="-1" id="offcanvasRight"
+    aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header container">
+      <h5 class="offcanvas-title" id="offcanvasRightLabel">
+        <a class="navbar-brand" href="#">
+          <img src="assets/Logo/logo.png" alt="Logo" class="col-lg-2 col-2" />
+          <!-- Replace with actual logo path -->
+        </a>
+      </h5>
+      <button type="button" class="text-white1 bg-transparent border-0" style="color: white !important;"
+        data-bs-dismiss="offcanvas" aria-label="Close">
+        <i class="fa-solid fa-xmark text-white1 fs-1 "></i>
+      </button>
+    </div>
+    <div class="offcanvas-body topoff container d-flex flex-lg-row align-items-center flex-column">
+      <div class="col-lg-6 col-12">
+        <ul class="navbar-nav me-auto mt-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            <span class="navhover"></span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="about.html">About</a>
+            <span class="navhover"></span>
+          </li>
+          <!--  -->
 
-      <!--  -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-            Service
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-            <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-            <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
-            <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
-            <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
-          </ul>
-        </li>
-        
+          <!--  -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Service
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
+              <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
+            </ul>
+          </li>
 
-        <li class="nav-item">
+
+          <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
-          <span class="navhover"></span>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
-          <span class="navhover"></span>
-        </li>
-      </ul>
+            <span class="navhover"></span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+            <span class="navhover"></span>
+          </li>
+        </ul>
+        <div>
+          <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white1 ">Lets Talk
+            <span class="lets-talk-btn-hover"></span>
+          </button>
+        </div>
+        <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
+          <a href="#" class="text-white1 mx-2"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="text-white1 mx-2"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-white1 mx-2"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-white1 mx-2"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
       <div>
-        <button class="lets-talk-btn col-lg-5 col-6 px-2 py-2 mt-5 text-white1 ">Lets Talk
-          <span class="lets-talk-btn-hover"></span>
-        </button>
       </div>
-      <div class="d-flex top-header-icon mt-5 pb-3 mt-2">
-        <a href="#" class="text-white1 mx-2"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="text-white1 mx-2"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="text-white1 mx-2"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="text-white1 mx-2"><i class="fab fa-linkedin"></i></a>
+      <div class="col-lg-6 col-12">
+        <h2 class="display-2 text-white1 text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
       </div>
-    </div>
-    <div>
-    </div>
-    <div class="col-lg-6 col-12">
-      <h2 class="display-2 text-white1 text-end fw-bold top-nav-heading">EXPLORE PAGES</h2>
     </div>
   </div>
-</div>
   <!-- OFFCANVAS -->
   <!-- CONTACT-US -->
   <div class="container-fluid bg d-flex flex-column align-items-center justify-content-center  h20 pb-0"
